Try to ensure select screen random buttons won't wrap

--- a/css/spni.css
+++ b/css/spni.css
@@ -1359,6 +1359,7 @@ body.modal-open {
 .select-quadrant-button {
     width: 100%;
     height: 49%;
+    white-space: nowrap;
 }
 
 .select-quadrant-button:first-child {
